--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -106,16 +106,17 @@ jQuery(document).ready(function() {
                 var row = $(this).closest('.row').clone(true).get(0);
                 $(row).children('div').each(function() {
                     var p = $(this).children('p').first();
-                    if ( !$(p).hasClass('toprow') ) {
+                    if ( !$(p).hasClass('toprow') && !$(p).hasClass('visible-xs') ) {
                         $(p).addClass('visible-xs').addClass('visible-sm'); 
                     } else {
                         $(p).hide();
                     }
                 });
+                $(row).find('.toprow').hide();
                 $(this).closest('.row').append('<hr class="visible-xs visible-sm" style="border-color:#bbb;"></hr>');
-                $(this).closest('.row').find('.toprow').hide();
                 $(row).insertAfter($(this).closest('.row'));
                 preprow(row);
+                $(this).closest('.row').find('.toprow').hide();
                 $(this).closest('.row').find('.add-row').parent().hide();
                 $(this).closest('.row').find('.delete-row').parent().show();
             }
