--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -108,9 +108,10 @@ jQuery(document).ready(function() {
                     var p = $(this).children('p').first();
                     if ( !$(p).hasClass('toprow') ) {
                         $(p).addClass('visible-xs').addClass('visible-sm'); 
+                    } else {
+                        $(p).remove();
                     }
                 });
-                $(row).find('.toprow').hide();
                 $(this).closest('.row').append('<hr class="visible-xs visible-sm" style="border-color:#bbb;"></hr>');
                 $(row).insertAfter($(this).closest('.row'));
                 preprow(row);
