--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -168,7 +168,7 @@ jQuery(document).ready(function() {
 
     var limitlevels = function(event) {
         var ls = $(this).closest('tr').find('.levelselector');
-        if (ls.hasClass('select2this')) ls.select2('destroy');
+        if ($(ls).hasClass('select2this')) $(ls).select2('destroy');
         ls.attr("disabled","disabled");
         var level = $('option:selected', this).attr('data-level');
         if ( level ) {
@@ -182,7 +182,7 @@ jQuery(document).ready(function() {
             ls.html(lopts);
         }
         ls.removeAttr("disabled");
-        if (ls.hasClass('select2this')) ls.select2();
+        if ($(ls).hasClass('select2this')) $(ls).select2();
     }
     var limitsubjects = function(event) {
         var institution = $(this).val();
