--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -83,7 +83,6 @@ jQuery(document).ready(function() {
 	    for ( var i = 0; i < subjects.length; i++ ) {
 	        stext += '<option>' + subjects[i] + '</option>';
 	    };
-        $(row).find('.select2this').select2('destroy').select2();
         $(row).find('.subjectselector').html(stext);
         $(row).find('.institutionselector').unbind('change',limitsubjects).bind('change',limitsubjects);
         $(row).find('.subjectselector').unbind('change',limitlevels).bind('change',limitlevels);
@@ -120,6 +119,7 @@ jQuery(document).ready(function() {
                 preprow(row);
                 $(this).closest('.row').find('.add-row').parent().hide();
                 $(this).closest('.row').find('.delete-row').parent().show();
+                $('.select2this').select2('destroy').select2();
             }
         } else {
             $(this).closest('table').hasClass('manyrows') ? maxrows = 30 : false;
