--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -83,6 +83,7 @@ jQuery(document).ready(function() {
 	    for ( var i = 0; i < subjects.length; i++ ) {
 	        stext += '<option>' + subjects[i] + '</option>';
 	    };
+        $(row).find('.select2this').select2('destroy').select2();
         $(row).find('.subjectselector').html(stext);
         $(row).find('.institutionselector').unbind('change',limitsubjects).bind('change',limitsubjects);
         $(row).find('.subjectselector').unbind('change',limitlevels).bind('change',limitlevels);
@@ -119,8 +120,6 @@ jQuery(document).ready(function() {
                 preprow(row);
                 $(this).closest('.row').find('.add-row').parent().hide();
                 $(this).closest('.row').find('.delete-row').parent().show();
-                $('.select2this').select2('destroy');
-                $('.select2this').select2();
             }
         } else {
             $(this).closest('table').hasClass('manyrows') ? maxrows = 30 : false;
@@ -169,7 +168,7 @@ jQuery(document).ready(function() {
 
     var limitlevels = function(event) {
         var ls = $(this).closest('tr').find('.levelselector');
-        if ($(ls).hasClass('select2this')) $(ls).select2('destroy');
+        if (ls.hasClass('select2this')) ls.select2('destroy');
         ls.attr("disabled","disabled");
         var level = $('option:selected', this).attr('data-level');
         if ( level ) {
@@ -183,7 +182,7 @@ jQuery(document).ready(function() {
             ls.html(lopts);
         }
         ls.removeAttr("disabled");
-        if ($(ls).hasClass('select2this')) $(ls).select2();
+        if (ls.hasClass('select2this')) ls.select2();
     }
     var limitsubjects = function(event) {
         var institution = $(this).val();
