try select2 mutli row functionality

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -5,6 +5,12 @@
 <link rel="stylesheet" type="text/css" media="all" href="/static/bootstrap3/bootstrap.min.css" />
 <script type="text/javascript" src="/static/bootstrap3/bootstrap.min.js"></script>
 
+<style>
+    .select2container {
+        height:40px;
+    }    
+</style>
+
 <script>
 jQuery(document).ready(function() {    
 
